--- a/starter-code/assets/css/base.css
+++ b/starter-code/assets/css/base.css
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-    background:brown;
+    background:green;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 19pt;
     font-weight: 300;
