--- a/starter-code/assets/css/layout.css
+++ b/starter-code/assets/css/layout.css
@@ -10,3 +10,44 @@
         margin-top: 0;
     }
 
+    @media only screen and (min-width:30em) {
+        nav ul{
+            flex-direction:row;
+        }
+        nav ul li{
+            flex:1 0 auto;
+            justify-content:space-between;
+        }
+    }
+    @media screen and (max-width: 736px) {
+    
+        /* Basic */
+    
+            body, input, textarea, select {
+                font-size: 14pt;
+                margin:0
+            }
+    
+            h2 {
+                font-size: 1.5em;
+                letter-spacing: 0;
+                font-weight: 300;
+            }
+    
+            .container {
+                padding: 0 15px 0 15px;
+            }
+            nav ul{
+                background:#444;
+                display:flex;
+                flex-direction:row;
+    
+            }
+            nav ul li a{
+                color:green;
+    
+            }
+            nav ul li a:hover{
+                background: rgba(0,0,0,0)
+            }
+    
